--- a/index.html
+++ b/index.html
@@ -1672,8 +1672,8 @@
             width: 561px;
             height: 841.5px;
             top: 0px;
-            left: -78px;
-            background-image: url("LMH_1613.JPG");
+            left: -58px;
+            background-image: url("nenanh/LMH_1613.JPG");
         }
 
         #HEADLINE8,
@@ -2532,7 +2532,7 @@
         #IMAGE3>.ladi-image>.ladi-image-background,
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="28"],
         #GALLERY4 .ladi-gallery .ladi-gallery-view-item[data-index="0"] {
-            background-image: url("canhan/1743513906501.jpg");
+            background-image: url("nenanh/canhan/1743513841922.jpg");
         }
 
         #IMAGE3>.ladi-image,
@@ -2826,7 +2826,7 @@
         #IMAGE4>.ladi-image>.ladi-image-background,
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="22"],
         #GALLERY5 .ladi-gallery .ladi-gallery-view-item[data-index="0"] {
-            background-image: url("canhan/1743513841925.jpg");
+            background-image: url("nenanh/canhan/1743513841925.jpg");
         }
 
         #GROUP4 {
@@ -3083,7 +3083,7 @@
             height: 230.5px;
             top: -16px;
             left: -9px;
-            background-image: url("LMH_1468.JPG");
+            background-image: url("nenanh/LMH_1468.JPG");
         }
 
         #IMAGE5>.ladi-image,
@@ -3188,7 +3188,7 @@
             height: 218.5px;
             top: 0px;
             left: -3.33339px;
-            background-image: url("LMH_1238.JPG");
+            background-image: url("nenanh/LMH_1238.JPG");
         }
 
         #GROUP8 {
@@ -3206,7 +3206,7 @@
             height: 213.125px;
             top: -10px;
             left: 4.2e-5px;
-            background-image: url("LMH_1792.JPG");
+            background-image: url("nenanh/LMH_1792.JPG");
         }
 
         #GROUP9 {
@@ -3224,7 +3224,7 @@
             height: 224.5px;
             top: -20px;
             left: -6.3333px;
-            background-image: url("LMH_1222.JPG");
+            background-image: url("nenanh/LMH_1222.JPG");
         }
 
         #GROUP10 {
@@ -3290,7 +3290,7 @@
             height: 292.467px;
             top: -20.0365px;
             left: -15.2367px;
-            background-image: url("album/LMH_1146.JPG");
+            background-image: url("nenanh/album/LMH_1146.JPG");
         }
 
         #IMAGE11 {
@@ -3303,7 +3303,7 @@
             height: 270.985px;
             top: -56.0365px;
             left: -9.90329px;
-            background-image: url("album/LMH_1898.JPG");
+            background-image: url("nenanh/album/LMH_1898.JPG");
         }
 
         #IMAGE11.ladi-animation>.ladi-image,
@@ -3327,7 +3327,7 @@
             height: 283.217px;
             top: -20.0365px;
             left: -12.9033px;
-            background-image: url("album/LMH_2021.JPG");
+            background-image: url("nenanh/album/LMH_2021.JPG");
         }
 
         #IMAGE13 {
@@ -3340,7 +3340,7 @@
             height: 277.467px;
             top: -12.0365px;
             left: -10.5699px;
-            background-image: url("album/LMH_1455.JPG");
+            background-image: url("nenanh/album/LMH_1577.JPG");
         }
 
         #IMAGE14 {
@@ -3353,7 +3353,7 @@
             height: 280.217px;
             top: -46.0365px;
             left: -12.9034px;
-            background-image: url("album/LMH_1559.JPG");
+            background-image: url("nenanh/album/LMH_1559.JPG");
         }
 
         #IMAGE15 {
@@ -3366,7 +3366,7 @@
             height: 302.967px;
             top: -48.037px;
             left: -18.57px;
-            background-image: url("album/LMH_2044.JPG");
+            background-image: url("nenanh/album/LMH_2044.JPG");
         }
 
         #IMAGE16 {
@@ -3379,7 +3379,7 @@
             height: 285.985px;
             top: -53.0365px;
             left: -15px;
-            background-image: url("album/LMH_2178.JPG");
+            background-image: url("nenanh/album/LMH_2178.JPG");
         }
 
         #IMAGE17 {
@@ -3392,7 +3392,7 @@
             height: 278.985px;
             top: -25.0365px;
             left: -11.9033px;
-            background-image: url("album/LMH_1564.JPG");
+            background-image: url("nenanh/album/LMH_1564.JPG");
         }
 
         #IMAGE18 {
@@ -3401,11 +3401,11 @@
         }
 
         #IMAGE18>.ladi-image>.ladi-image-background {
-            width: 192.656px;
-            height: 288.985px;
-            top: -32.0365px;
-            left: -15.57px;
-            background-image: url("canhan/1743513841922.jpg");
+            width: 240.656px;
+            height: 185.985px;
+            top: -2.0365px;
+            left: -73.57px;
+            background-image: url("album/486169619_1050923606863038_9160995648677402855_n.jpg");
         }
 
         #IMAGE19 {
@@ -3418,7 +3418,7 @@
             height: 282.985px;
             top: -18.0365px;
             left: -12.9033px;
-            background-image: url("canhan/1743513841927.jpg");
+            background-image: url("album/486414959_1015637557118118_1411277850005706019_n.jpg");
         }
 
         #BUTTON2 {
@@ -3791,7 +3791,7 @@
             height: 882.266px;
             top: -73px;
             left: -100.167px;
-            background-image: url("LMH_0905.JPG");
+            background-image: url("nenanh/LMH_1210.jpg");
         }
 
         #IMAGE24.ladi-animation>.ladi-image,
@@ -4767,7 +4767,7 @@
             height: 647px;
             top: -78px;
             left: -63.25px;
-            background-image: url("LMH_1468.JPG");
+            background-image: url("nenanh/LMH_1468.JPG");
         }
 
         #IMAGE30.ladi-animation>.ladi-image {
@@ -5979,7 +5979,7 @@
         #IMAGE197>.ladi-image>.ladi-image-background {
             top: -13.6px;
             left: 0.475px;
-            background-image: url("LMH_0905.JPG");
+            background-image: url("nenanh/LMH_1210.jpg");
         }
 
         #IMAGE197>.ladi-image,
@@ -5991,7 +5991,7 @@
         #IMAGE207>.ladi-image>.ladi-image-background {
             top: -20.6px;
             left: 0.475px;
-            background-image: url("LMH_1222.JPG");
+            background-image: url("nenanh/LMH_1222.JPG");
         }
 
         #HEADLINE197,
@@ -6405,8 +6405,7 @@
                             </div>
                         </div>
                         <div id="HEADLINE11" class="ladi-element">
-                            <h3 class="ladi-headline">Hán Duy &amp; Phạm
-                                Hân</h3>
+                            <h3 class="ladi-headline">Duy Thanh &amp; Thanh Hân</h3>
                         </div>
                     </div>
                 </div>
@@ -6517,7 +6516,7 @@
                     <div class="ladi-group">
                         <div id="HEADLINE69" class="ladi-element ladi-animation-hidden">
                             <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                                Phạm Hân
+                                Thanh Hân
                             </h3>
                         </div>
                         <div id="HEADLINE70" class="ladi-element ladi-animation-hidden">
@@ -6525,7 +6524,7 @@
                         </div>
                         <div id="HEADLINE71" class="ladi-element ladi-animation-hidden">
                             <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                                Hán Duy
+                                Duy Thanh
                             </h3>
                         </div>
                     </div>
@@ -6567,7 +6566,7 @@
                         </div>
                         <div id="HEADLINE14" class="ladi-element ladi-animation-hidden">
                             <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                                Hán Duy
+                                Duy Thanh
                             </h3>
                         </div>
                         <div id="PARAGRAPH3" class="ladi-element ladi-animation-hidden">
@@ -6644,7 +6643,7 @@
                         </div>
                         <div id="HEADLINE16" class="ladi-element ladi-animation-hidden">
                             <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                                Phạm Hân
+                                Thanh Hân
                             </h3>
                         </div>
                         <div id="PARAGRAPH5" class="ladi-element ladi-animation-hidden">
@@ -6654,7 +6653,7 @@
                             <div class="ladi-paragraph ladi-transition">
                                 Cô dâu là người vui vẻ, hướng nội. Thích nấu
                                 nướng, đọc sách
-                                và du lịch cùng gia đình.
+                                và du lịch.
                             </div>
                         </div>
                     </div>
@@ -8051,7 +8050,7 @@
                 </div>
                 <div id="HEADLINE64" class="ladi-element ladi-animation-hidden">
                     <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                        Phạm Hân ♥️ Hán Duy<br />
+                        Duy Thanh ♥️ Thanh Hân<br />
                     </h3>
                 </div>
                 <a href="https://www.mewedding.online/" target="_blank" id="GROUP70"
@@ -8062,7 +8061,7 @@
                         </div>
                         <div id="PARAGRAPH58" class="ladi-element">
                             <div class="ladi-paragraph">
-                                Happy Wedding - Phạm Hân ♥️ Hán Duy
+                                Happy Wedding - Duy Thanh ♥️ Thanh Hân
                             </div>
                         </div>
                     </div>
@@ -8256,7 +8255,7 @@
                         </div>
                         <div id="HEADLINE100" class="ladi-element">
                             <h3 class="ladi-headline ladi-lazyload">
-                                Hán Duy&nbsp; &amp;&nbsp; Phạm Hân<br />
+                                Duy Thanh&nbsp; &amp;&nbsp; Thanh Hân<br />
                             </h3>
                         </div>
                         <div id="GROUP109" class="ladi-element">
@@ -9467,7 +9466,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "canhan/1743513841922.jpg",
+              "dC": "album/486169619_1050923606863038_9160995648677402855_n.jpg",
               "dF": "image",
               "a": "lightbox"
             }
@@ -9480,7 +9479,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "canhan/1743513841927.jpg",
+              "dC": "album/486414959_1015637557118118_1411277850005706019_n.jpg",
               "dF": "image",
               "a": "lightbox"
             }
