--- a/index.html
+++ b/index.html
@@ -4856,8 +4856,8 @@
         }
 
         #POPUP4 {
-            width: 398.664px;
-            height: 586px;
+            width: 442.663px;
+            height: 689px;
         }
 
         #POPUP4,
@@ -4877,8 +4877,10 @@
         }
 
         #GALLERY1 {
-            width: 398.663px;
-            height: 587px;
+            width: 500.663px;
+            height: 689px;
+            top: 0px;
+            left: -32px;
         }
 
         #GALLERY1>.ladi-gallery>.ladi-gallery-view,
@@ -7990,8 +7992,8 @@
                 </div>
                 <div id="PARAGRAPH19" class="ladi-element ladi-animation-hidden">
                     <div class="ladi-paragraph">
-                        10h30p Thứ Bảy, Ngày 12 - 04 - 2024<br />Tức ngày
-                        15 - 03 - 2024
+                        10h30p Chủ Nhật, Ngày 13 - 04 - 2024<br />Tức ngày
+                        16 - 03 - 2024
                         Ất Tỵ<br />
                     </div>
                 </div>
@@ -8081,7 +8083,7 @@
                                 <div class="ladi-gallery-view">
                                     <div class="ladi-gallery-view-arrow ladi-gallery-view-arrow-left"></div>
                                     <div class="ladi-gallery-view-arrow ladi-gallery-view-arrow-right"></div>
-                                    <div class="ladi-gallery-view-item ladi-lazyload" data-index="0"></div>
+                                    <div class="ladi-gallery-view-item ladi-lazyload selected" data-index="0"></div>
                                     <div class="ladi-gallery-view-item ladi-lazyload" data-index="1"></div>
                                     <div class="ladi-gallery-view-item ladi-lazyload" data-index="2"></div>
                                     <div class="ladi-gallery-view-item ladi-lazyload" data-index="3"></div>
@@ -8097,12 +8099,13 @@
                                     <div class="ladi-gallery-view-item ladi-lazyload" data-index="13"></div>
                                     <div class="ladi-gallery-view-item ladi-lazyload" data-index="14"></div>
                                     <div class="ladi-gallery-view-item ladi-lazyload" data-index="15"></div>
-                                    <div class="ladi-gallery-view-item ladi-lazyload selected" data-index="16"></div>
+                                    <div class="ladi-gallery-view-item ladi-lazyload" data-index="16"></div>
                                     <div class="ladi-gallery-view-item ladi-lazyload" data-index="17"></div>
+                                    <div class="ladi-gallery-view-item ladi-lazyload" data-index="18"></div>
                                 </div>
                                 <div class="ladi-gallery-control">
                                     <div class="ladi-gallery-control-box" style="left: 0px">
-                                        <div class="ladi-gallery-control-item ladi-lazyload" data-index="0"></div>
+                                        <div class="ladi-gallery-control-item ladi-lazyload selected" data-index="0"></div>
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="1"></div>
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="2"></div>
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="3"></div>
@@ -8118,7 +8121,7 @@
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="13"></div>
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="14"></div>
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="15"></div>
-                                        <div class="ladi-gallery-control-item ladi-lazyload selected" data-index="16">
+                                        <div class="ladi-gallery-control-item ladi-lazyload" data-index="16">
                                         </div>
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="17"></div>
                                         <div class="ladi-gallery-control-item ladi-lazyload" data-index="18"></div>
