--- a/index.html
+++ b/index.html
@@ -5800,7 +5800,7 @@
 
         #POPUP23 {
             width: 206px;
-            height: 220px;
+            height: 180px;
             top: 57px;
             left: auto;
             right: 7px;
@@ -8247,7 +8247,7 @@
                 <div id="POPUP23" class="ladi-element">
                     <div class="ladi-popup">
                         <div class="ladi-popup-background"></div>
-                        <div data-action="true" id="BUTTON47" class="ladi-element">
+                        <!-- <div data-action="true" id="BUTTON47" class="ladi-element">
                             <div class="ladi-button ladi-transition">
                                 <div class="ladi-button-background ladi-lazyload"></div>
                                 <div id="BUTTON_TEXT47" class="ladi-element ladi-button-headline">
@@ -8256,7 +8256,7 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div data-action="true" id="BUTTON48" class="ladi-element">
                             <div class="ladi-button ladi-transition">
                                 <div class="ladi-button-background ladi-lazyload"></div>
