--- a/index.html
+++ b/index.html
@@ -4912,157 +4912,157 @@
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="0"] {
-            background-image: url("nenanh/album/sdile/LMH_0905.JPG");
+            background-image: url("album/sdile/LMH_0905.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="0"] {
-            background-image: url("nenanh/album/sdile/LMH_0905.JPG");
+            background-image: url("album/sdile/LMH_0905.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="1"],
         #GALLERY4 .ladi-gallery .ladi-gallery-view-item[data-index="1"] {
-            background-image: url("nenanh/album/sdile/LMH_1146.JPG");
+            background-image: url("album/sdile/LMH_1146.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="1"],
         #GALLERY4 .ladi-gallery .ladi-gallery-control-item[data-index="1"] {
-            background-image: url("nenanh/album/sdile/LMH_1146.JPG");
+            background-image: url("album/sdile/LMH_1146.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="2"] {
-            background-image: url("nenanh/album/sdile/LMH_1222.JPG");
+            background-image: url("album/sdile/LMH_1222.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="2"] {
-            background-image: url("nenanh/album/sdile/LMH_1222.JPG");
+            background-image: url("album/sdile/LMH_1222.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="3"] {
-            background-image: url("nenanh/album/sdile/LMH_1238.JPG");
+            background-image: url("album/sdile/LMH_1238.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="3"] {
-            background-image: url("nenanh/album/sdile/LMH_1238.JPG");
+            background-image: url("album/sdile/LMH_1238.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="4"] {
-            background-image: url("nenanh/album/sdile/LMH_1455.JPG");
+            background-image: url("album/sdile/LMH_1455.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="4"] {
-            background-image: url("nenanh/album/sdile/LMH_1455.JPG");
+            background-image: url("album/sdile/LMH_1455.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="5"] {
-            background-image: url("nenanh/album/sdile/LMH_1468.JPG");
+            background-image: url("album/sdile/LMH_1468.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="5"] {
-            background-image: url("nenanh/album/sdile/LMH_1468.JPG");
+            background-image: url("album/sdile/LMH_1468.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="6"] {
-            background-image: url("nenanh/album/sdile/LMH_1559.JPG");
+            background-image: url("album/sdile/LMH_1559.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="6"] {
-            background-image: url("nenanh/album/sdile/LMH_1559.JPG");
+            background-image: url("album/sdile/LMH_1559.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="7"] {
-            background-image: url("nenanh/album/sdile/LMH_1564.JPG");
+            background-image: url("album/sdile/LMH_1564.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="7"] {
-            background-image: url("nenanh/album/sdile/LMH_1564.JPG");
+            background-image: url("album/sdile/LMH_1564.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="8"] {
-            background-image: url("nenanh/album/sdile/LMH_1613.JPG");
+            background-image: url("album/sdile/LMH_1613.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="8"] {
-            background-image: url("nenanh/album/sdile/LMH_1613.JPG");
+            background-image: url("album/sdile/LMH_1613.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="9"] {
-            background-image: url("nenanh/album/sdile/LMH_1792.JPG");
+            background-image: url("album/sdile/LMH_1792.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="9"] {
-            background-image: url("nenanh/album/sdile/LMH_1792.JPG");
+            background-image: url("album/sdile/LMH_1792.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="10"] {
-            background-image: url("nenanh/album/sdile/LMH_1898.JPG");
+            background-image: url("album/sdile/LMH_1898.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="10"] {
-            background-image: url("nenanh/album/sdile/LMH_1898.JPG");
+            background-image: url("album/sdile/LMH_1898.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="11"] {
-            background-image: url("nenanh/album/sdile/LMH_2021.JPG");
+            background-image: url("album/sdile/LMH_2021.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="11"] {
-            background-image: url("nenanh/album/sdile/LMH_2021.JPG");
+            background-image: url("album/sdile/LMH_2021.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="12"] {
-            background-image: url("nenanh/album/sdile/LMH_2044.JPG");
+            background-image: url("album/sdile/LMH_2044.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="12"] {
-            background-image: url("nenanh/album/sdile/LMH_2044.JPG");
+            background-image: url("album/sdile/LMH_2044.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="13"] {
-            background-image: url("nenanh/album/sdile/LMH_2044.JPG");
+            background-image: url("album/sdile/LMH_2044.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="13"] {
-            background-image: url("nenanh/album/sdile/LMH_2044.JPG");
+            background-image: url("album/sdile/LMH_2044.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="14"] {
-            background-image: url("nenanh/album/sdile/LMH_2178.JPG");
+            background-image: url("album/sdile/LMH_2178.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="14"] {
-            background-image: url("nenanh/album/sdile/LMH_2178.JPG");
+            background-image: url("album/sdile/LMH_2178.JPG");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="15"] {
-            background-image: url("nenanh/album/sdile/1743513841922.jpg");
+            background-image: url("album/sdile/1743513841922.jpg");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="15"] {
-            background-image: url("nenanh/album/sdile/1743513841922.jpg");
+            background-image: url("album/sdile/1743513841922.jpg");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="16"] {
-            background-image: url("nenanh/album/sdile/1743513841925.jpg");
+            background-image: url("album/sdile/1743513841925.jpg");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="16"] {
-            background-image: url("nenanh/album/sdile/1743513841925.jpg");
+            background-image: url("album/sdile/1743513841925.jpg");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="17"] {
-            background-image: url("nenanh/album/sdile/1743513841927.jpg");
+            background-image: url("album/sdile/1743513841927.jpg");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="17"] {
-            background-image: url("nenanh/album/sdile/1743513841927.jpg");
+            background-image: url("album/sdile/1743513841927.jpg");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-view-item[data-index="18"] {
-            background-image: url("nenanh/album/sdile/1743513906501.jpg");
+            background-image: url("album/sdile/1743513906501.jpg");
         }
 
         #GALLERY1 .ladi-gallery .ladi-gallery-control-item[data-index="18"] {
-            background-image: url("nenanh/album/sdile/1743513906501.jpg");
+            background-image: url("album/sdile/1743513906501.jpg");
         }
 
         #THIEP,
@@ -6981,6 +6981,25 @@
 
     <!-- Nút tạm dừng và play là hình ảnh SVG -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
+    <link rel="preload" href="album/sdile/LMH_0905.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1146.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1222.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1238.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1455.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1468.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1559.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1564.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1613.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1792.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_1898.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_2021.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_2044.JPG" as="image">
+    <link rel="preload" href="album/sdile/LMH_2178.JPG" as="image">
+    <link rel="preload" href="album/sdile/1743513841922.jpg" as="image">
+    <link rel="preload" href="album/sdile/1743513841925.jpg" as="image">
+    <link rel="preload" href="album/sdile/1743513841927.jpg" as="image">
+    <link rel="preload" href="album/sdile/1743513906501.jpg" as="image">
 </head>
 
 <body class>
