--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             window.ladi_ttq_data.push(arguments);
         };
     </script>
+    <meta property="og:title" content="Thanh ❤️ Hân">
+    <meta property="og:description" content="Thanh ❤️ Hân Happy Wedding">
+    <meta property="og:image" content="nenanh/LMH_1210.jpg">
+    <meta property="og:url" content="https://thanhhan.happywedding.fun">
     <meta id="viewport" name="viewport"
         content="width=420,user-scalable=no,initial-scale=4.571428571428571,minimum-scale=4.571428571428571,maximum-scale=4.571428571428571" />
     <meta property="og:type" content="website" />
