--- a/index.html
+++ b/index.html
@@ -7216,8 +7216,7 @@
                         </div>
                         <div id="PARAGRAPH4" class="ladi-element ladi-animation-hidden">
                             <div class="ladi-paragraph ladi-transition">
-                                Chú rể là người cởi mở, thân thiện, giao
-                                tiếp tốt và thuộc
+                                Chú rể là người cởi mở, thân thiện, thích thể thao và thuộc
                                 tuýt người hướng ngoại hòa đồng
                             </div>
                         </div>
