--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </script>
     <meta property="og:title" content="Thanh ❤️ Hân">
     <meta property="og:description" content="Thanh ❤️ Hân Happy Wedding">
-    <meta property="og:image" content="nenanh/canhan/1743606754346.jpeg">
+    <meta property="og:image" content="1934f663-c85c-430e-9ad2-97cf1d3c883d.jpg">
     <meta property="og:url" content="https://thanhhan.happywedding.fun">
     <meta id="viewport" name="viewport"
         content="width=420,user-scalable=no,initial-scale=4.571428571428571,minimum-scale=4.571428571428571,maximum-scale=4.571428571428571" />
