--- a/index.html
+++ b/index.html
@@ -7585,7 +7585,7 @@
                         </div>
                         <div id="PARAGRAPH227" class="ladi-element">
                             <div class="ladi-paragraph ladi-transition">Vào
-                                hồi
+                                lúc
                                 16:00<br></div>
                         </div>
                         <div id="GROUP247" class="ladi-element">
@@ -7710,7 +7710,7 @@
                         </div>
                         <div id="PARAGRAPH297" class="ladi-element">
                             <div class="ladi-paragraph ladi-transition">Vào
-                                hồi
+                                lúc
                                 16:00<br></div>
                         </div>
                         <div id="GROUP317" class="ladi-element">
