--- a/index.html
+++ b/index.html
@@ -7296,7 +7296,7 @@
                         </div>
                         <div id="PARAGRAPH6" class="ladi-element ladi-animation-hidden">
                             <div class="ladi-paragraph ladi-transition">
-                                Cô dâu là người vui vẻ, hướng nội. Thích nấu
+                                Cô dâu là người vui vẻ, hướng ngoại. Thích nấu
                                 nướng, đọc sách
                                 và du lịch.
                             </div>
